@@ -17,7 +17,6 @@
 package org.apache.solr.handler.component;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -28,15 +27,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import org.apache.lucene.index.FieldInfo;
+import org.apache.lucene.document.StoredField;
 import org.apache.lucene.index.Fields;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.PostingsEnum;
-import org.apache.lucene.index.StoredFieldVisitor;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.util.BytesRef;
+import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.SolrParams;
@@ -49,6 +48,7 @@ import org.apache.solr.schema.SchemaField;
 import org.apache.solr.search.DocList;
 import org.apache.solr.search.DocListAndSet;
 import org.apache.solr.search.ReturnFields;
+import org.apache.solr.search.SolrDocumentFetcher;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.search.SolrReturnFields;
 import org.apache.solr.util.SolrPluginUtils;
@@ -262,54 +262,35 @@ public class TermVectorComponent extends SearchComponent implements SolrCoreAwar
 
     //Only load the id field to get the uniqueKey of that
     //field
-
-    final String finalUniqFieldName = uniqFieldName;
-
-    final List<String> uniqValues = new ArrayList<>();
-    
-    // TODO: is this required to be single-valued? if so, we should STOP
-    // once we find it...
-    final StoredFieldVisitor getUniqValue = new StoredFieldVisitor() {
-      @Override 
-      public void stringField(FieldInfo fieldInfo, byte[] bytes) {
-        uniqValues.add(new String(bytes, StandardCharsets.UTF_8));
-      }
-
-      @Override 
-      public void intField(FieldInfo fieldInfo, int value) {
-        uniqValues.add(Integer.toString(value));
-      }
-
-      @Override 
-      public void longField(FieldInfo fieldInfo, long value) {
-        uniqValues.add(Long.toString(value));
-      }
-
-      @Override
-      public Status needsField(FieldInfo fieldInfo) {
-        return (fieldInfo.name.equals(finalUniqFieldName)) ? Status.YES : Status.NO;
-      }
-    };
+    SolrDocumentFetcher docFetcher = searcher.getDocFetcher();
+    SolrReturnFields srf = new SolrReturnFields(uniqFieldName, rb.req);
 
     while (iter.hasNext()) {
       Integer docId = iter.next();
       NamedList<Object> docNL = new NamedList<>();
 
       if (keyField != null) {
-        reader.document(docId, getUniqValue);
-        String uniqVal = null;
-        if (uniqValues.size() != 0) {
-          uniqVal = uniqValues.get(0);
-          uniqValues.clear();
-          docNL.add("uniqueKey", uniqVal);
-          termVectors.add(uniqVal, docNL);
+        // guaranteed to be one and only one since this is uniqueKey!
+        SolrDocument solrDoc = docFetcher.solrDoc(docId, srf);
+
+        String uKey = null;
+        Object val = solrDoc.getFieldValue(uniqFieldName);
+        if (val != null) {
+          if (val instanceof StoredField) {
+            uKey = ((StoredField) val).stringValue();
+          } else {
+            uKey = val.toString();
+          }
         }
+        assert null != uKey;
+        docNL.add("uniqueKey", uKey);
+        termVectors.add(uKey, docNL);
       } else {
         // support for schemas w/o a unique key,
         termVectors.add("doc-" + docId, docNL);
       }
 
-      if ( null != fields ) {
+      if (null != fields) {
         for (Map.Entry<String, FieldOptions> entry : fieldOptions.entrySet()) {
           final String field = entry.getKey();
           final Terms vector = reader.getTermVector(docId, field);
@@ -321,11 +302,14 @@ public class TermVectorComponent extends SearchComponent implements SolrCoreAwar
       } else {
         // extract all fields
         final Fields vectors = reader.getTermVectors(docId);
-        for (String field : vectors) {
-          Terms terms = vectors.terms(field);
-          if (terms != null) {
-            TermsEnum termsEnum = terms.iterator();
-            mapOneVector(docNL, allFields, reader, docId, termsEnum, field);
+        // There can be no documents with vectors
+        if (vectors != null) {
+          for (String field : vectors) {
+            Terms terms = vectors.terms(field);
+            if (terms != null) {
+              TermsEnum termsEnum = terms.iterator();
+              mapOneVector(docNL, allFields, reader, docId, termsEnum, field);
+            }
           }
         }
       }
@@ -419,7 +403,7 @@ public class TermVectorComponent extends SearchComponent implements SolrCoreAwar
       result = new ArrayList<>(vals.length);
       for (int i = 0; i < vals.length; i++) {
         try {
-          result.add(new Integer(vals[i]));
+          result.add(Integer.valueOf(vals[i]));
         } catch (NumberFormatException e) {
           throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, e.getMessage(), e);
         }
